--- a/package.json
+++ b/package.json
@@ -1,17 +1,62 @@
 {
   "name": "gptdesktop",
   "version": "1.0.0",
-  "description": "ask chatgpt from ur desktop",
-  "main": "main.js",
+  "description": "lets u chatgpt where u r",
+  "main": "main.cjs",
   "scripts": {
+    "start": "electron",
+    "package": "electron-builder",
+    "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/muffinsAKA/gptdesktop.git"
+  },
+  "type": "commonjs",
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "electron": "^25.1.0"
+  "bugs": {
+    "url": "https://github.com/muffinsAKA/gptdesktop/issues"
   },
+  "homepage": "https://github.com/muffinsAKA/gptdesktop#readme",
   "devDependencies": {
-    "electron-reloader": "^1.2.3"
+    "@babel/core": "^7.22.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.22.5",
+    "babel-loader": "^9.1.2",
+    "electron": "^25.1.0",
+    "electron-builder": "^24.4.0",
+    "electron-packager": "^17.1.1",
+    "express": "^4.18.2",
+    "node": "^20.2.0",
+    "webpack": "^5.86.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "build": {
+    "appId": "your.app.id",
+    "mac": {
+      "category": "your.app.category"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "gpt.ico"
+    },
+    "files": [
+      "main.cjs",
+      "index.html",
+      "renderer.js",
+      "preload.js",
+      "gpttray.png"
+    ],
+    "nsis": {
+      "oneClick": false,
+      "perMachine": true,
+      "allowToChangeInstallationDirectory": true
+    }
+  },
+  "dependencies": {
+    "@electron/remote": "^2.0.10",
+    "path-browserify": "^1.0.1"
   }
 }
