api key works in full modes

--- a/package.json
+++ b/package.json
@@ -47,7 +47,11 @@
       "index.html",
       "renderer.js",
       "preload.js",
+      "api.cfg",
       "gpttray.png"
+    ],
+    "extraFiles": [
+      "./api.cfg"
     ],
     "nsis": {
       "oneClick": false,
